# autonomous-disaster-response

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  __init__.py  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  logging_config.py  main.py
backend/app/agents/: __init__.py  allocation_agent.py  communication_agent.py  graph.py  ingestion_agent.py  prioritization_agent.py  state.py  verification_agent.py
backend/app/models/: __init__.py  agent_log.py  incident.py  resource.py
backend/app/routers/: __init__.py  agents.py  incidents.py  resources.py  websocket.py
backend/app/schemas/: __init__.py  agent_log.py  incident.py  resource.py  websocket.py
backend/app/services/: __init__.py  data_ingestion.py  geo_service.py  mock_data.py  websocket_manager.py
backend/app/tasks/: __init__.py  scheduler.py
backend/scripts/: seed_db.py
backend/tests/: conftest.py  test_agents.py  test_incidents.py  test_websocket.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
frontend/: package.json
